--- a/www/index.html
+++ b/www/index.html
@@ -52,15 +52,49 @@
                         <div class="content-block">
                             <div id="map"></div>
                             <script>
-      // Note: This example requires that you consent to location sharing when
-      // prompted by your browser. If you see the error "The Geolocation service
-      // failed.", it means you probably did not give permission for the browser to
-      // locate you.
-      
-                            </script>
+                                    // Note: This example requires that you consent to location sharing when
+                                    // prompted by your browser. If you see the error "The Geolocation service
+                                    // failed.", it means you probably did not give permission for the browser to
+                                    // locate you.
+                                    var map, infoWindow;
+                                    function initMap() {
+                                        map = new google.maps.Map(document.getElementById('map'), {
+                                            center: { lat: -34.397, lng: 150.644 },
+                                            zoom: 16
+                                        });
+                                        infoWindow = new google.maps.InfoWindow;
 
+                                        // Try HTML5 geolocation.
+                                        if (navigator.geolocation) {
+                                            navigator.geolocation.getCurrentPosition(function (position) {
+                                                var pos = {
+                                                    lat: position.coords.latitude,
+                                                    lng: position.coords.longitude
+                                                };
+
+                                                infoWindow.setPosition(pos);
+                                                infoWindow.setContent('Location found.');
+                                                infoWindow.open(map);
+                                                map.setCenter(pos);
+                                            }, function () {
+                                                handleLocationError(true, infoWindow, map.getCenter());
+                                            });
+                                        } else {
+                                            // Browser doesn't support Geolocation
+                                            handleLocationError(false, infoWindow, map.getCenter());
+                                        }
+                                    }
+
+                                    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                                        infoWindow.setPosition(pos);
+                                        infoWindow.setContent(browserHasGeolocation ?
+                                                              'Error: The Geolocation service failed.' :
+                                                              'Error: Your browser doesn\'t support geolocation.');
+                                        infoWindow.open(map);
+                                    }
+                            </script>
                             <script async defer
-                                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAgy9vntCIVx6M-RB2fG82FJ2AFSLFI4Q&callback=initMap">
+                                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALB51uma5dVYxl5CtYGjnreJMG8Gnl4Ig&callback=initMap">
                             </script>
 
                         </div>
