--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
                         <div class="content-block-title"></div>
                         <div class="content-block">
                             <div id="map"></div>
-                            <div id="places"></div>
+                            <div id="golocationmap"></div>
                             <script>
                             </script>
                             <!--<script async defer
@@ -80,6 +80,7 @@
                 <div data-page="index-2" class="page">
                     <div class="page-content">
                         <div class="content-block">
+                            <p id="surroundings"></p>
                             <p>This is a second view. Lets, for example, have here some internal pages with navbar navigation</p>
                         </div>
                         <div class="list-block">
@@ -88,7 +89,8 @@
                                     <a href="about.html" class="item-link">
                                         <div class="item-content">
                                             <div class="item-inner">
-                                                <div class="item-title">About Us</div>
+                                                <div class="item-title">Know Your Surrounding</div>
+                                                
                                             </div>
                                         </div>
                                     </a>
@@ -129,8 +131,9 @@
                         </div>
                     </div>
                     <div class="page-content">
-
-                        <img style="width:100%;height:100%" id="imageFile" src="" />
+                        <img id="imageFile" src="" />
+                        <p id="golocationdate"></p>
+                        <p id="golocation"></p>
                         <pre id="allMetaDataSpan"></pre>
                         <div class="list-block">
                         </div>
@@ -146,7 +149,7 @@
                 <div data-page="index-5" class="page">
                     <div class="navbar">
                         <div class="navbar-inner">
-                            <div class="center">iWasHere Camera</div>
+                            <div class="center">iWasHere</div>
                         </div>
                     </div>
                     <div class="page-content">
@@ -172,14 +175,13 @@
         </div>
     </div>
 </div>
+ <!-- Path to Framework7 Library JS-->
+<script type="text/javascript" src="js/framework7.min.js"></script>
+<!-- Path to your app js-->
+<script type="text/javascript" src="js/my-app.js"></script>
 <!-- Path to Cordova Library JS-->
 <script type="text/javascript" src="js/exif.js"></script>
 <!-- Path to Cordova Library JS-->
 <script type="text/javascript" src="cordova.js"></script>
-<!-- Path to Framework7 Library JS-->
-<script type="text/javascript" src="js/framework7.min.js"></script>
-<!-- Path to your app js-->
-<script type="text/javascript" src="js/my-app.js"></script>
-
 </body>
 </html>
